--- a/src/components/animal/Animal.css
+++ b/src/components/animal/Animal.css
@@ -1,12 +1,29 @@
 .animals {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-flow: row wrap;
+  justify-content: left;
 }
 
-.animal {
-    flex-basis: 28%;
-    margin: 1em;
-    padding: 1em;
-    border: 1px solid goldenrod;
+.animal-card {
+  display: flex;
+  flex-flow: column;
+  flex-basis: 15%;
+  margin: 1em;
+  padding: 1em;
+  border: 1px solid rgb(163, 59, 59);
+}
+
+.animal-container {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.animal__details {
+  padding: 0 .5rem;
+}
+
+.animal__name {
+  justify-self: center;
+  align-self: center;
 }
