--- a/src/components/customer/Customers.css
+++ b/src/components/customer/Customers.css
@@ -1,12 +1,20 @@
 .customers {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-flow: row wrap;
+  justify-content: left;
 }
 
 .customer {
-    flex-basis: 28%;
-    margin: 1em;
-    padding: 1em;
-    border: 1px solid goldenrod;
+  display: flex;
+  flex-flow: column;
+  flex-basis: 15%;
+  margin: 1em;
+  padding: 1em;
+  border: 1px solid rgb(163, 59, 59);
+}
+
+.customer-container {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
